create 3 img hover effevcts styles

--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
   <meta charset="UTF-8">
   <title>Image Effects</title>
   <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="js/image-efx.js"></script>
+</head>
+<body>
+
+  <div class="crossfade-frame">
+    <img src="http://fillmurray.com/400/400" alt="Bill" class="front">
+    <img src="http://fillmurray.com/400/401" alt="Bill2" class="back">
+  </div>
+
+  <div class="slide-frame">
+    <img src="http://lorempixel.com/400/400/" alt="random" class="top">
+    <img src="http://lorempixel.com/400/401/" alt="random2" class="bottom">
+  </div>
+
+  <div class="caption-frame">
+    <img src="http://lorempixel.com/400/402/" alt="random3">
+    <p>Selfies cold-pressed Neutra, Brooklyn pug street art church-key organic locavore fanny pack 3 wolf moon. Polaroid Brooklyn stumptown four dollar toast Bushwick XOXO, food truck readymade gastropub trust fund fingerstache. </p>
+  </div>
+
+
+  <div class="caption-frame">
+    <img src="http://lorempixel.com/400/402/" alt="random3">
+    <p>Selfies cold-pressed Neutra, Brooklyn pug street art church-key organic locavore fanny pack 3 wolf moon.</p>
+  </div>
+  
 </body>
 </html>
