refactor to use less class names

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
   <div class="crossfade-frame">
-    <img src="http://fillmurray.com/400/400" alt="Bill" class="front">
-    <img src="http://fillmurray.com/400/401" alt="Bill2" class="back">
+    <img src="http://fillmurray.com/400/400" alt="Bill">
+    <img src="http://fillmurray.com/400/401" alt="Bill2">
   </div>
 
   <div class="slide-frame">
-    <img src="http://lorempixel.com/400/400/" alt="random" class="top">
-    <img src="http://lorempixel.com/400/401/" alt="random2" class="bottom">
+    <img src="http://lorempixel.com/400/400/" alt="random">
+    <img src="http://lorempixel.com/400/401/" alt="random2">
   </div>
 
   <div class="caption-frame">
